# logparser

./: .gitignore  README.md  SensorLog.g4  main.py  run.sh  sensorlog_collector.py  sensorlog_wrapper.py
.github/workflows/: ci.yml
parsers/cpp/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp  mmap.hpp  parallelism.cpp  parallelism.hpp  run.sh  types.cpp  types.hpp  utils.hpp
parsers/python3/: .gitignore  main.py  run.sh  sensorlog_collector.py  sensorlog_wrapper.py
